Fixed imdb_data.pkl link text

--- a/09a Sentiment Analysis with LSTM.ipynb
+++ b/09a Sentiment Analysis with LSTM.ipynb
@@ -19,7 +19,7 @@
     "3. For reviews with less than max_len words, pad the review with whitespace. This equalizes the review lengths across examples.\n",
     "\n",
     "We have already done this preprocessing and saved the data in a pickle file: `imdb_data.pkl`. \n",
-    "The needed file can be downloaded from [https://s3-us-west-1.amazonaws.com/nervana-course/imdb.vocab](https://s3-us-west-1.amazonaws.com/nervana-course/imdb_data.pkl) and placed in the `data` directory."
+    "The needed file can be downloaded from [https://s3-us-west-1.amazonaws.com/nervana-course/imdb_data.pkl](https://s3-us-west-1.amazonaws.com/nervana-course/imdb_data.pkl) and placed in the `data` directory."
    ]
   },
   {
