Modify learning rates, add more descriptive text

--- a/Part 1 - Sentiment Analysis of Movie Reviews.ipynb
+++ b/Part 1 - Sentiment Analysis of Movie Reviews.ipynb
@@ -7,8 +7,8 @@
     "editable": true
    },
    "source": [
-    "Sentiment Analysis of Movie Reviews\n",
-    "===================================\n",
+    "## Sentiment Analysis of Movie Reviews\n",
+    "\n",
     "\n",
     "In this exercise, we will write a model to analyze movie reviews on IMDB and decide if they are positive or negative reviews.\n",
     "\n",
@@ -193,7 +193,7 @@
     "editable": true
    },
    "source": [
-    "4. Algorithm\n",
+    "4. Select the Algorithm\n",
     "------------\n",
     "For training, we set up the cost function, which we want to minimize. We also select an optimization algorithm with a particular learning rate `0.01`."
    ]
