--- a/Part 2 - Google Streetview.ipynb
+++ b/Part 2 - Google Streetview.ipynb
@@ -7,42 +7,34 @@
     "editable": true
    },
    "source": [
-    "# Writing a custom dataset\n",
-    "This notebook will walk you through implementing a custom iterator for a modified version of the Street View House Number (SVHN) dataset. You will then design a network to train on this dataset. \n",
+    "# Part 2: Google Streetview Competition\n",
     "\n",
-    "## SVHN dataset\n",
+    "In this section, you will compete to train a network to solve the Google Streetview challenge. The goal is give you a feeling for the type of problems AI developers face. Adjust the learning rate schedule to achieve the lowest possible training cost!\n",
     "\n",
-    "This dataset is a collection of 73,257 images of house numbers collected from Google Streetview. The original dataset has bounding boxes for all the digits in the image:\n",
+    "## The Problem\n",
+    "\n",
+    "Google regularly takes street view photos to populate Google Maps. To associate each photographed house with an address, Google built computer vision algorithms to read the house number from the image. Today we will train a network for the first phase of this process, which is to identify where in the image the house number is located.\n",
+    "\n",
+    "This dataset is a collection of 73,257 images of house numbers. Each image has been annotated by a human with a box around the digits.\n",
     "\n",
     "<img src=\"http://ufldl.stanford.edu/housenumbers/examples_new.png\" width=500px>\n",
     "\n",
-    "We have modified the dataset such that each image is 64x64 pixels (with 3 color channels), and the target is a *single* bounding box over all the digits. Your goal is to build a network that, given an image, returns bounding box coordinates for the location of the digit sequence."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# setup datasets\n",
-    "%matplotlib inline\n",
-    "from svhn import train_model, train_model_button, Dashboard"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "If all goes well, you are ready to try training on this network! First, let's reset the dataset to zero (since you drew one example from above). We also add a test set for evaluation."
+    "Your goal is to train a network to, given a new image, accurately predict the bounding box on the house number. \n",
+    "\n",
+    "## Network\n",
+    "\n",
+    "We have already built the model as a neural network with a stack of different types of layers. The input is the image, and the output has 4 numbers, for the coordinates of the predicted box.\n",
+    "\n",
+    "\n",
+    "<img src=\"image.png\", width=800px>\n",
+    "\n",
+    "## Challenge\n",
+    "\n",
+    "1. When you run the code below, a dashboard will be created with several sliders to adjust the learning rate over time. When you click the 'Train' button, the model will begin training with your current settings. \n",
+    "\n",
+    "2. When complete, you will recieve the cost of this current training run, as well as the best cost you have achieved so far. \n",
+    "\n",
+    "3. Adjust the sliders to help the model train to the lowest cost possible. Good luck!"
    ]
   },
   {
@@ -52,10 +44,14 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
+    "# setup datasets\n",
+    "%matplotlib inline\n",
+    "from svhn import train_model, train_model_button, Dashboard\n",
+    "\n",
     "learn_inputs = 4 * [3]\n",
     "dashboard = Dashboard()"
    ]
@@ -72,6 +68,17 @@
    "source": [
     "dashboard.train(learn_inputs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
