add training graphic

--- a/Part 1 - Sentiment Analysis of Movie Reviews.ipynb
+++ b/Part 1 - Sentiment Analysis of Movie Reviews.ipynb
@@ -249,7 +249,15 @@
     "Train model\n",
     "-----------\n",
     "\n",
-    "To train the model, we call the `fit()` function and pass in the training set. Here we train for 2 epochs, meaning two complete passes through the dataset."
+    "Now are ready to train the model. Recall what happens during the training process:\n",
+    "\n",
+    "<img src=\"train_schematic.png\" width=700px>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "To train the model, we call the `fit()` function and pass in the training set. Here we train for 2 epochs, meaning two rounds through the dataset."
    ]
   },
   {
@@ -329,6 +337,17 @@
     "    \n",
     "z = interact(inference, x=text_window())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
