--- a/Part 1 - Sentiment Analysis of Movie Reviews.ipynb
+++ b/Part 1 - Sentiment Analysis of Movie Reviews.ipynb
@@ -33,7 +33,7 @@
     "1. Setup\n",
     "--------\n",
     "\n",
-    "We first generate a backend to tell neon what hardware to run the model on."
+    "We first generate a compute backend and provide some needed settings."
    ]
   },
   {
@@ -285,7 +285,7 @@
     "Accuracy\n",
     "--------\n",
     "\n",
-    "We can then measure the model's accuracy on both the training set but also the held-out validation set.\n",
+    "We can then measure the model's accuracy on the validation data -- data that the model was not trained on.\n",
     "\n"
    ]
   },
@@ -339,15 +339,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
+   "source": [
+    "Note: In some browsers, the above text window may not show up. In that case,run the below code to do inference. Feel free to edit the text inside the quotes and re-run the code to experiment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "inference(\"This movie was terrible!\")"
+   ]
   }
  ],
  "metadata": {
