--- a/Part 2 - Google Streetview.ipynb
+++ b/Part 2 - Google Streetview.ipynb
@@ -30,11 +30,11 @@
     "\n",
     "## Challenge\n",
     "\n",
-    "1. When you run the code below, a dashboard will be created with several sliders to adjust the learning rate over time. When you click the 'Train' button, the model will begin training with your current settings. \n",
+    "1. When you run the code below, a dashboard will be created with several sliders to adjust the learning rate over four different phases of training.\n",
     "\n",
-    "2. When complete, you will recieve the cost of this current training run, as well as the best cost you have achieved so far. \n",
+    "2. Run the `dashboard.train()` code to train the model with the current settings. When complete, you will recieve the cost of this current training run, as well as the best cost you have achieved so far. \n",
     "\n",
-    "3. Adjust the sliders to help the model train to the lowest cost possible. Good luck!"
+    "3. Adjust the sliders to help the model train to the lowest cost possible. Re-run the `dashboard.train()` code to try another attempt. Good luck!"
    ]
   },
   {
@@ -50,9 +50,9 @@
    "source": [
     "# setup datasets\n",
     "%matplotlib inline\n",
-    "from svhn import train_model, train_model_button, Dashboard\n",
+    "from svhn import Dashboard\n",
     "\n",
-    "learn_inputs = 4 * [3]\n",
+    "# set up dashboard\n",
     "dashboard = Dashboard()"
    ]
   },
@@ -66,16 +66,14 @@
    },
    "outputs": [],
    "source": [
-    "dashboard.train(learn_inputs)"
+    "dashboard.train()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
