--- a/05 Model Architectures.ipynb
+++ b/05 Model Architectures.ipynb
@@ -108,7 +108,7 @@
     "To set up a simple Tree:\n",
     "\n",
     "```\n",
-    "# define a branch mode\n",
+    "# define a branch node\n",
     "b1 = BranchNode(name=\"b1\")\n",
     "\n",
     "# define the main trunk\n",
@@ -119,7 +119,7 @@
     "\n",
     "# build the model as a Tree\n",
     "# alphas are the weights given to the branches of Tree during backpropagation.\n",
-    "model = Model(layers=SingleOutputTree([path1, path2]), alphas = [1, 1])\n",
+    "model = Model(layers=SingleOutputTree([path1, path2], alphas = [1, 1]))\n",
     "```\n",
     "\n",
     "We have included below skeleton of the code for you to fill out to build the model above."
